--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ MIRtoolbox1.8.1/*
 !MIRtoolbox1.8.1/note.txt
 GG_correlationsWORKSCRIPT.py
 temp.wav
+high.wav
+high180.wav
+hoeslhigh.wav
+witekhigh.wav
